# safe_llm

./: .gitignore  Dockerfile  LICENCE  README.md  __main__.py  config.json  main.py  pyproject.toml  pytest.ini  start.sh
app/: llm_helper.py  models.py  routes.py  utils.py
app/guardrails/: guardrail.py
app/similarity/: __init__.py  similarity.py
tests/: __init__.py  conftest.py  test_api.py  test_guardrails.py  test_llm_helper.py  test_similarity.py  test_utils.py
