[project]
name = "safe-llm-endpoint"
version = "0.1.0"
description = "A secure FastAPI endpoint for LLM interactions with guardrails and similarity checking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
